Main UI
- Add webtoon direction icon
- Change naming from "Volume" to "Book"

Redaer UI
- Support for webtoons reading
- Add vertical thumb strip for webtoons
- Add buttons to jump to previous or next book

Build
- Improve Android release builder

Fixes
- Fix spacing on compact view
- Fix thumbnails center jumps when zooming